<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="23dp"
        app:srcCompat="@drawable/afteryou" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="168dp"
        android:layout_height="82dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView2"
        android:layout_marginRight="5dp"
        android:fontFamily="@font/poppins"
        android:text="After You Dessert Cafe"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="24dp"
        android:layout_marginTop="117dp"
        android:background="@color/colorBtn"
        android:text="Directions" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="195dp"
        android:background="?android:attr/listDivider" />

    <!-- scrollable restaurant details -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="220dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins"
                android:text="Address"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="339dp"
                android:layout_height="42dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="21dp"
                android:fontFamily="@font/nunito"
                android:text="68 Orchard Road | #03-73 Plaza Singapura, Singapore 238839"
                android:textStyle="italic"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:text="Opening Hours"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="21dp"
                android:fontFamily="@font/nunito"
                android:text="@string/hours"
                android:textStyle="italic"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="21dp"
                android:fontFamily="@font/poppins"
                android:text="Contact"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="21dp"
                android:fontFamily="@font/nunito"
                android:text="@string/contact"
                android:textStyle="italic"
                android:textSize="15sp" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="21dp"
                android:fontFamily="@font/poppins"
                android:text="Menu"
                android:textColor="@color/brown"
                android:textStyle="bold"
                android:textSize="18sp" />

            <!-- menu images -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/toast"
                    android:onClick="onClick"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/toast" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/pancake" />
            </LinearLayout>
            <!-- end of menu images -->

            <!-- menu item names -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="29dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito"
                    android:text="Nutella Toast"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="0dp"
                    android:text="@string/pancake"
                    android:fontFamily="@font/nunito"
                    android:textAlignment="center" />
            </LinearLayout>
            <!-- end of item names -->
        </LinearLayout>
    </ScrollView>
    <!-- end of scrollable info -->
</RelativeLayout>